--- a/narkomfin.html
+++ b/narkomfin.html
@@ -3,86 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
-
-    <style>
-      body {
-        width: 700px;
-        margin:0 auto;
-        font-family: 'PT Sans', sans-serif;
-        /*background-image: url(dc-online-media-mockup.jpg);
-        background-size: 800px 20624px;
-        background-position: top center;
-        background-repeat: no-repeat;*/
-      }
-      p {
-        letter-spacing: -0.05px;
-      }
-
-      h1, h2, h3{
-        font-family: 'PT Sans Caption', sans-serif;
-        font-weight: bold;
-      }
-      h1{
-        margin-top: 66px;
-        font-size: 40px;
-        line-height: 46px;
-      }
-      h1 + p {
-        margin-top: 14px;
-        font-family: 'PT Sans Caption', sans-serif;
-        font-size: 22px;
-        line-height: 32px;
-        color: rgba(0, 0, 0, 0.4);
-      }
-      h2{
-        margin-top: 43px;
-        font-size: 32px;
-        line-height: 36px;
-      }
-      h2 + p {
-        margin-top: 7px;
-      }
-
-      h3{
-        margin-top: 36px;
-        font-size: 28px;
-        line-height: 34px;
-      }
-      h3 + p {
-        margin-top: 6px;
-      }
-      p, blockquote {
-        font-size: 22px;
-        line-height: 34px;
-      }
-      blockquote {
-        font-style: italic;
-      }
-      p + p,
-      p + blockquote,
-      blockquote + p,
-      blockquote + blockquote {
-        margin-top: 29px;
-      }
-      ul{
-        margin: 29px 0 29px 30px;
-      }
-      li {
-        margin:17px 0;
-      }
-
-      a {
-        color: inherit;  
-      }
-
-    </style>
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
     <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и Игнатия Милиниса для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
+
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
     <h2>История создания</h2>
     <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
@@ -98,6 +26,7 @@
     <p>В проектной документации дом именовался 2-м домом СНК и планировался как многофункциональный комплекс, состоящий из четырёх корпусов, выполняющих разные функции: жилой комплекс, коммунальный центр (в свою очередь, включающий в себя столовую, физкультурный и читальный залы), детский корпус (детский сад и ясли) — он не был построен и впоследствии частично занял корпус столовой и библиотеки, и самостоятельного служебного двора с размещенными на его территории механической прачечной, сушилкой, гаражом и др. Дом должна была окружать обширная парковая территория.</p>
 
     <h3>Пространственная организация жилого комплекса</h3>
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
     <p>Пространство перед общественным корпусом композиционно выделялось квадратной площадкой, на которой планировалось разместить небольшое здание для детского сада. Все три объёма, различные по массам, строго ритмически уравновешенные, увязанные между собой, составляли композиционное ядро комплекса, сбалансированное в пространстве корпусом прачечной, ориентированным на Новинский бульвар. Перед прачечной также была устроена квадратная площадка, служившая своеобразным парадным пространством, связывающим комплекс с городом. Корпус прачечной так же, как и жилой дом, был частично поднят на колоннах, что освобождало для прохода пространство первого этажа. Пройдя под корпусом прачечной через «парадный двор» перед входом с Новинского бульвара, по диагональной аллее можно было попасть в общественную зону комплекса или по другой аллее через жилой корпус в уровне «открытого» первого этажа — в парк за домом, где была организована своеобразная видовая площадка.</p>
     <p>Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту:
     <blockquote>«В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка».</blockquote>
@@ -113,6 +42,7 @@
     <p>В обоих концах жилого корпуса, по обе стороны лестницы со входом непосредственно с лестничной клетки, размещены квартиры «2F» (соединенные по две ячейки «F»), и занимающие площадь, равную двум сдвоенным малометражным квартирам (кв. 14 и 29). В этих квартирах две жилые комнаты высотой 3 м. Передняя, ванная, туалет, кухня и столовая имеют высоту 2,3 м. По существу, это обычные (одноярусные) квартиры с несколько непривычным распределением высот, а потому и с более интересным пространственным решением.</p>
     <p>И наконец, в самой верхней части дома, на уровне плоской крыши, сделано несколько комнат типа общежития, где реализовны опубликованные Н. Милютиным в «Соцгороде» жилые ячейки на одного человека. Часть из них — на одного человека, часть — на двух. Между каждой парой комнат расположены душевая и умывальная комнаты.</p>
     <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
     <ul>
       <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно попасть из остекленной галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в другие — поднимаясь в неё также по аналогичной лестнице.</li>
