--- a/centrosouz.html
+++ b/centrosouz.html
@@ -3,55 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Здание Центросоюза</title>
-    <link rel="stylesheet" href="reset.css">
-
-    <style>
-     body {
-       width: 700px;
-       margin: 0 auto;
-       font-family: 'Helvetica';
-       margin-bottom: 60px;
-     }
-
-     h1 {
-       font-size: 36px;
-       font-weight: bold;
-       margin-top: 60px;
-     }
-
-     p {
-       margin-top: 20px;
-       line-height: 22px;
-       font-size: 15px;
-     }
-
-     h2 {
-       font-size: 20px;
-       font-weight: bold;
-       margin-top: 30px;
-     }
-
-     a {
-       color: inherit;
-     }
-
-     a:hover {
-       color: #08c;
-     }
-
-     blockquote {
-       color: #999;
-       margin-top: 25px;
-       font-size: 18px;
-       font-weight: lighter;
-       line-height: 30px;
-     }
-    </style>
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
     <h1>Здание Центросоюза</h1>
     <p>Зда́ние <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%BE%D1%81%D0%BE%D1%8E%D0%B7">Центросоюза</a> (Наркомлегпро́ма) — офисное здание, возведённое в 1928—1936 годах в центре Москвы по проекту <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B5_%D0%9A%D0%BE%D1%80%D0%B1%D1%8E%D0%B7%D1%8C%D0%B5">Ле Корбюзье</a>, при участии <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%96%D0%B0%D0%BD%D0%BD%D0%B5%D1%80%D0%B5,_%D0%9F%D1%8C%D0%B5%D1%80">П. Жаннере</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BB%D0%BB%D0%B8,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%94%D0%B6%D0%B5%D0%BC%D1%81%D0%BE%D0%B2%D0%B8%D1%87">Н. Я. Колли</a>. Представляет собой комплекс корпусов, обращённый одновременно на две параллельные улицы — <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D1%8F%D1%81%D0%BD%D0%B8%D1%86%D0%BA%D0%B0%D1%8F_%D1%83%D0%BB%D0%B8%D1%86%D0%B0">Мясницкую</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D0%BE%D1%81%D0%BF%D0%B5%D0%BA%D1%82_%D0%90%D0%BA%D0%B0%D0%B4%D0%B5%D0%BC%D0%B8%D0%BA%D0%B0_%D0%A1%D0%B0%D1%85%D0%B0%D1%80%D0%BE%D0%B2%D0%B0_(%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0)">проспект Академика Сахарова</a>. Здание относится к числу наиболее интересных архитектурных раритетов не только Москвы, но и мира, представляя собой созданный знаменитым архитектором образец европейского <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D1%8B%D0%B9_%D0%BC%D0%BE%D0%B4%D0%B5%D1%80%D0%BD%D0%B8%D0%B7%D0%BC">модернизма</a> конца 20-х годов XX века.</p>
     <p>Первоначально это было административное здание Всесоюзного общества кооператоров (для которого и проводился конкурс), затем Наркомлегпром СССР, Министерство текстильной промышленности СССР, с <a target="_blank" href="https://ru.wikipedia.org/wiki/1959_%D0%B3%D0%BE%D0%B4">1959 года</a> — ЦСУ СССР. В настоящее время здесь располагается <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D1%81%D0%BB%D1%83%D0%B6%D0%B1%D0%B0_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%BE%D0%B9_%D1%81%D1%82%D0%B0%D1%82%D0%B8%D1%81%D1%82%D0%B8%D0%BA%D0%B8">Федеральная служба государственной статистики</a> — Росстат и  <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D1%81%D0%BB%D1%83%D0%B6%D0%B1%D0%B0_%D0%BF%D0%BE_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2%D0%BE%D0%BC%D1%83_%D0%BC%D0%BE%D0%BD%D0%B8%D1%82%D0%BE%D1%80%D0%B8%D0%BD%D0%B3%D1%83">Федеральная служба по финансовому мониторингу</a></p>
+
+    <img src="images/centrosouz.jpg" alt="Здание Центросоюза">
 
     <h2>История проекта и характеристика</h2>
     <p>Идея строительства здания для размещения <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%BE%D1%81%D0%BE%D1%8E%D0%B7">Центросоюза</a> возникла во времена <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B0%D1%8F_%D1%8D%D0%BA%D0%BE%D0%BD%D0%BE%D0%BC%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F_%D0%BF%D0%BE%D0%BB%D0%B8%D1%82%D0%B8%D0%BA%D0%B0">НЭПа</a>, когда основой экономики стали различные кооперативные общества. Под новое здание по предложению архитектора <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9,_%D0%91%D0%BE%D1%80%D0%B8%D1%81_%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2%D0%B8%D1%87">Б. М. Великовского</a> в 1925 году выбрали место между двумя параллельными улицами — <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D1%8F%D1%81%D0%BD%D0%B8%D1%86%D0%BA%D0%B0%D1%8F_%D1%83%D0%BB%D0%B8%D1%86%D0%B0">Мясницкой</a> и планируемой к прокладке Ново-Мясницкой улицей (ныне — <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D0%BE%D1%81%D0%BF%D0%B5%D0%BA%D1%82_%D0%90%D0%BA%D0%B0%D0%B4%D0%B5%D0%BC%D0%B8%D0%BA%D0%B0_%D0%A1%D0%B0%D1%85%D0%B0%D1%80%D0%BE%D0%B2%D0%B0_(%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0)">проспект Академика Сахарова</a>), на их пересечении с проектируемым бульваром, идущим от <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B5%D1%83%D0%BB%D0%BE%D0%BA_%D0%9E%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%BD%D0%B0%D1%8F_%D0%A1%D0%BB%D0%BE%D0%B1%D0%BE%D0%B4%D0%B0">Огородной Слободы</a>.</p>
