+ stylesheets&javascripts, + images

--- a/centrosouz.html
+++ b/centrosouz.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Здание Центросоюза</title>
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/style.css">
 
   </head>
   <body>
     <h1>Здание Центросоюза</h1>
     <p>Зда́ние <a target="_blank" href="https://ru.wikipedia.org/wiki/Центросоюз">Центросоюза</a> (Наркомлегпро́ма) — офисное здание, возведённое в 1928—1936 годах в центре Москвы по проекту <a target="_blank" href="https://ru.wikipedia.org/wiki/Ле_Корбюзье">Ле Корбюзье</a>, при участии <a target="_blank" href="https://ru.wikipedia.org/wiki/Жаннере,_Пьер">П. Жаннере</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/Колли,_Николай_Джемсович">Н. Я. Колли</a>. Представляет собой комплекс корпусов, обращённый одновременно на две параллельные улицы — <a target="_blank" href="https://ru.wikipedia.org/wiki/Мясницкая_улица">Мясницкую</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/Проспект_Академика_Сахарова_(Москва)">проспект Академика Сахарова</a>. Здание относится к числу наиболее интересных архитектурных раритетов не только Москвы, но и мира, представляя собой созданный знаменитым архитектором образец европейского <a target="_blank" href="https://ru.wikipedia.org/wiki/Архитектурный_модернизм">модернизма</a> конца 20-х годов XX века.</p>
     <p>Первоначально это было административное здание Всесоюзного общества кооператоров (для которого и проводился конкурс), затем Наркомлегпром СССР, Министерство текстильной промышленности СССР, с <a target="_blank" href="https://ru.wikipedia.org/wiki/1959_год">1959</a> года — ЦСУ СССР. В настоящее время здесь располагается <a target="_blank" href="https://ru.wikipedia.org/wiki/Федеральная_служба_государственной_статистики">Федеральная служба государственной статистики</a> — Росстат и <a target="_blank" href="https://ru.wikipedia.org/wiki/Федеральная_служба_по_финансовому_мониторингу">Федеральная служба по финансовому мониторингу</a>.</p>
+
+    <img src="images/centrosouz.jpg" alt="Здание Центросоюза" />
 
     <h2>История проекта и характеристика</h2>
     <p>Идея строительства здания для размещения <a target="_blank" href="https://ru.wikipedia.org/wiki/Центросоюз">Центросоюза</a> возникла во времена <a target="_blank" href="https://ru.wikipedia.org/wiki/Новая_экономическая_политика">НЭПа</a>, когда основой экономики стали различные кооперативные общества. Под новое здание по предложению архитектора <a target="_blank" href="https://ru.wikipedia.org/wiki/Великовский,_Борис_Михайлович">Б. М. Великовского</a> в 1925 году выбрали место между двумя параллельными улицами — <a target="_blank" href="https://ru.wikipedia.org/wiki/Мясницкая_улица">Мясницкой</a> и планируемой к прокладке Ново-Мясницкой улицей (ныне — <a target="_blank" href="https://ru.wikipedia.org/wiki/Проспект_Академика_Сахарова_(Москва)">проспект Академика Сахарова</a>), на их пересечении с проектируемым бульваром, идущим от <a target="_blank" href="https://ru.wikipedia.org/wiki/Переулок_Огородная_Слобода">Огородной Слободы</a>.</p>
