--- a/centrosouz.html
+++ b/centrosouz.html
@@ -2,10 +2,8 @@
 <html>
   <head lang="en">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css" media="screen" title="no title">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
     <title>Дом Центрсоюза</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
     <h1>Здание Центросоюза</h1>
