--- a/centrosouz.html
+++ b/centrosouz.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Здание Центросоюза</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Здание Центрсоюза</h1>
