--- a/centrosouz.html
+++ b/centrosouz.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Здание Центросоюза</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
+
   </head>
 
   <body>
-    <h1>Здание <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%BE%D1%81%D0%BE%D1%8E%D0%B7">Центросоюза</a></h1>
+    <h1>Здание <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%BE%D1%81%D0%BE%D1%8E%D0%B7">Центросоюза</a> </h1>
+    <p>офисное здание, возведённое в 1928—1936 годах в центре Москвы по проекту Ле Корбюзье, при участии П. Жаннере и Н. Я. Колли[1]. Представляет собой комплекс корпусов, обращённый одновременно на две параллельные улицы — Мясницкую и проспект Академика Сахарова. </p>
     <p>Зда́ние Центросоюза (Наркомлегпро́ма) — офисное здание, возведённое в 1928—1936 годах в центре Москвы по проекту Ле <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B5_%D0%9A%D0%BE%D1%80%D0%B1%D1%8E%D0%B7%D1%8C%D0%B5">Корбюзье</a>, при участии <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%96%D0%B0%D0%BD%D0%BD%D0%B5%D1%80%D0%B5,_%D0%9F%D1%8C%D0%B5%D1%80">П. Жаннере</a> и Н. Я. <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BB%D0%BB%D0%B8,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%94%D0%B6%D0%B5%D0%BC%D1%81%D0%BE%D0%B2%D0%B8%D1%87">Колли</a>. Представляет собой комплекс корпусов, обращённый одновременно на две параллельные улицы — <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D1%8F%D1%81%D0%BD%D0%B8%D1%86%D0%BA%D0%B0%D1%8F_%D1%83%D0%BB%D0%B8%D1%86%D0%B0">Мясницкую</a> и <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D0%BE%D1%81%D0%BF%D0%B5%D0%BA%D1%82_%D0%90%D0%BA%D0%B0%D0%B4%D0%B5%D0%BC%D0%B8%D0%BA%D0%B0_%D0%A1%D0%B0%D1%85%D0%B0%D1%80%D0%BE%D0%B2%D0%B0_(%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0)">проспект Академика Сахарова</a>. Здание относится к числу наиболее интересных архитектурных раритетов не только Москвы, но и мира, представляя собой созданный знаменитым архитектором образец европейского <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D1%8B%D0%B9_%D0%BC%D0%BE%D0%B4%D0%B5%D1%80%D0%BD%D0%B8%D0%B7%D0%BC">модернизма</a> конца 20-х годов XX века.</p>
+    <img src="images/centrosouz.jpg" alt="Центосоюз" />
     <p>Первоначально это было административное здание Всесоюзного общества кооператоров (для которого и проводился конкурс), затем Наркомлегпром СССР, Министерство текстильной промышленности СССР, <a tagret="_blank" href="https://ru.wikipedia.org/wiki/1959_%D0%B3%D0%BE%D0%B4">с 1959 года</a> — ЦСУ СССР. В настоящее время здесь располагается <a tagret="_blank" href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D1%81%D0%BB%D1%83%D0%B6%D0%B1%D0%B0_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%BE%D0%B9_%D1%81%D1%82%D0%B0%D1%82%D0%B8%D1%81%D1%82%D0%B8%D0%BA%D0%B8">Федеральная служба государственной статистики</a> — Росстат и <a tagret="_blank" href="">Федеральная служба по финансовому мониторингу.</a></p>
 
     <h2>История проекта и характеристика</h2>
