--- a/narkomfin.html
+++ b/narkomfin.html
@@ -3,100 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/style.css">  
 
-    <style>
-      body {
-        width: 700px;
-        margin: 0 auto;
-        font-family: 'PT Sans', sans-serif;;
-        /*background-image: url(dc-online-media-mockup.jpg);
-        background-size: 800px 20624px;
-        background-position: top center;
-        background-repeat: no-repeat;*/
-      }
-
-      /*  Хак для верстки
-
-      h1,
-      h2,
-      h3,
-      h1 + p {
-        letter-spacing: -0.1px;
-      }
-
-      p {
-        letter-spacing: -0.0px;
-      }
-
-       Конец  */
-
-      h1, h2, h3 {
-        font-family: 'PT Sans Caption', sans-serif;
-        font-weight: bold;
-      }
-
-      h1 {
-        margin-top: 66px;
-        font-size: 40px;
-        line-height: 46px;
-      }
-      h1 + p {
-        margin-top: 14px;
-        font-family: 'PT Sans Caption', sans-serif;
-        font-size: 22px;
-        line-height: 32px;
-        color: rgba(0, 0, 0, .4);
-      }
-
-      h2 {
-        margin-top: 43px;
-        font-size: 32px;
-        line-height: 36px;
-      }
-
-      h2 + p {
-        margin-top: 7px;
-      }
-
-      h3 {
-        margin-top: 36px;
-        font-size: 28px;
-        line-height: 34px;
-      }
-
-      h3 + p {
-        margin-top: 6px;
-      }
-
-      p, blockquote, li {
-        font-size: 22px;
-        line-height:  34px;
-      }
-
-      blockquote {
-        font-style: italic;
-      }
-
-      p + p,
-      p + blockquote,
-      blockquote + p,
-      blockquote + blockquote {
-        margin-top: 29px;
-      }
-      ul {
-        margin: 29px 0 29px 30px;
-      }
-      li {
-        margin: 17px 0;
-      }
-
-      a {
-        color: inherit;
-      }
-
-    </style>
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
@@ -104,6 +12,7 @@
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение»</p>
 
     <h2>История создания</h2>
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
     <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса</p>
 
     <h2>Идеология</h2>
