--- a/centrosouz.html
+++ b/centrosouz.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Здание Центросоюза</title>
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
     <h1>Здание Центросоюза</h1>
