--- a/narkomfin.html
+++ b/narkomfin.html
@@ -3,112 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
-
-    <style>
-      body{
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        font-family: 'PT Sans',sans-serif;
-      }
-
-      h1, h2, h3, p, ul, blockquote {
-        width: 700px;
-        margin: 0 auto;
-      }
-
-      h1, h2, h3 {
-        font-family: 'PT Sans Caption', sans-serif;
-        font-weight: bold;
-      }
-
-      h1{
-        margin-top: 66px;
-        font-size: 40px;
-        line-height: 46px;
-      }
-
-      h1 + p {
-        margin-top: 14px;
-        font-family: 'PT Sans Caption', sans-serif;
-        font-size: 22px;
-        line-height: 32px;
-        color: rgba(0, 0, 0, .4);
-      }
-
-      h2 {
-        margin-top: 43px;
-        font-size: 32px;
-        line-height: 36px;
-      }
-
-      h2 + p {
-        margin-top: 7px;
-      }
-
-      h3 {
-        margin-top: 36px;
-        font-size: 28px;
-        line-height: 34px;
-      }
-
-      h3 + p {
-        margin-top: 6px;
-      }
-
-      p, blockquote, li {
-        font-size: 22px;
-        line-height: 34px;
-      }
-
-      blockquote {
-        font-style: italic;
-      }
-
-      p + p,
-      p + blockquote,
-      blockquote + p,
-      blockquote + blockquote {
-        margin-top: 29px;
-      }
-
-      ul {
-
-        margin: 29px auto;
-      }
-
-      li {
-        margin: 17px 0 17px 30px;
-      }
-      img {
-        width: 1020px;
-        margin:80px auto;
-        display: block;
-      }
-
-      img + h2 {
-        margin-top: -1px;
-      }
-
-      img + p ,
-      img + blockquote
-      img + ul {
-        margin-top: -3px;
-      }
-
-      h2 + img {
-        margin-top: 82px;
-      }
-
-      h3 + img {
-        margin-top: 81px;
-      }
-
-      a {
-        color: inherit;
-      }
-    </style>
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
