--- a/narkomfin.html
+++ b/narkomfin.html
@@ -3,105 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
-
-    <style>
-      body {
-        width: 700px;
-        margin: 0 auto;
-        font-family: "PT Sans", sans-serif;
-
-        letter-spacing: -0.5px;
-        }
-
-        /* Хак для вёрстки */
-
-        /*h1,
-        h2,
-        h3,
-        h1+p {
-          letter-spacing: -0.1px;
-
-        }
-
-        p {
-          letter-spacing: -0.1px;
-        }*/
-
-        /* Конец хака */
-
-        h1, h2, h3 {
-          font-family: "PT Sans Caption", sans-serif;
-          font-weight: bold;
-        }
-
-        h1 {
-          margin-top: 66px;
-          font-size: 40px;
-          line-height: 46px;
-        }
-
-        h1 + p {
-          margin-top: 14px;
-          font-family: "PT Sans Caption", sans-serif;
-          font-size: 22px;
-          line-height: 32px;
-          color: rgba(0, 0, 0, .4)
-        }
-
-        h2 {
-          margin-top: 43px;
-          font-size: 32px;
-          line-height: 36px;
-        }
-
-        h2 + p {
-          margin-top: 7px;
-
-        }
-
-        h3 {
-          margin-top: 36px;
-          font-size: 28px;
-          line-height: 34px;
-
-        }
-
-        h3 + p {
-          margin-top: 6px;
-        }
-
-        p, blockquote, li {
-          font-size: 22px;
-          line-height: 34px;
-        }
-
-        blockquote {
-          font-style: italic;
-        }
-
-        p + p,
-        p + blockquote,
-        blockquote + p,
-        blockquote + blockquote {
-          margin-top: 29px;
-        }
-
-        ul {
-          margin: 29px 0 29px 30px;
-        }
-
-        li {
-          margin: 17px 0;
-        }
-
-        a {
-          color: inherit;
-        }
+    <link rel="stylesheet" href="stylesheets/style.css">
 
 
-    </style>
+
 
 
   </head>
@@ -109,6 +14,8 @@
     <h1>Дом Наркомфина</h1>
     <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
+
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
     <h2>История создания</h2>
     <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса</p>
