--- a/centrosouz/centrosouz.html
+++ b/centrosouz/centrosouz.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Здание Центросоюза</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
 
