--- a/narkomfin.html
+++ b/narkomfin.html
@@ -6,28 +6,7 @@
   <title>Дом Наркомфина</title>
   <link rel="stylesheet" href="stylesheets/style.css">
   <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
-  <script type="text/javascript">
-
-    $(function() {
-
-      $('.sidebar a').each(function() {
-
-        $(this).on('click', function(e) {
-
-          e.preventDefault();
-
-          var scrollTo = $(this).attr('href');
-          var whitespace = scrollTo == '#s1' ? 70 : 30
-
-          $('html,body').animate( {
-            scrollTop: $(scrollTo).offset().top - whitespace
-          }, 1000);
-        });
-        
-      });
-
-    });
-  </script>
+  <script src="javascripts/sidebar.js" charset="utf-8"></script>
 
 </head>
 <body>
