--- a/narkomfin.html
+++ b/narkomfin.html
@@ -4,10 +4,19 @@
   <meta charset="utf-8">
   <title>Дом Наркомфина</title>
   <link rel="stylesheet" href="stylesheets/style.css">
-  </head>
-  <body>
+ <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
+ <script src>"javascripts/sidebar.js" charset="utf-8"></script>
 
-   <nav>
+ </script>
+
+
+ </script>
+
+  </head>
+
+
+  <body>
+   <nav class="sidebar">
      <ul>
        <li>
          <a href="#s1">Дом Наркомфина</a>
