--- a/narkomfin.html
+++ b/narkomfin.html
@@ -10,6 +10,11 @@
   </head>
   <body>
 
+    <nav class="menubar">
+      <a class="logo" href="#"><a/>
+      <a href="#">О проекте</a>
+    </nav>
+
     <nav class="sidebar">
       <ul>
         <li>
