внесла новые изменения

--- a/narkomfin.html
+++ b/narkomfin.html
@@ -9,7 +9,11 @@
   </head>
   <body>
 
-    <nav>
+    <nav class="menubar">
+      <a class="logo" href="#"></a>
+      <a href="#">о проекте</a>
+    </nav>
+
     <nav class="sidebar">
       <ul>
         <li>
