--- a/narkomfin.html
+++ b/narkomfin.html
@@ -10,6 +10,11 @@
   </head>
   <body>
 
+    <div class="menubar">
+      <a class="logo"><a href="#"></a></a>
+      <a href="">О проекте</a>
+    </div>
+
     <nav class="sidebar">
       <ul>
         <li>
