--- a/narkomfin.html
+++ b/narkomfin.html
@@ -8,6 +8,10 @@
     <script type="text/javascript" src="javascripts/script.js"></script>
   </head>
   <body>
+    <div class="menubar">
+      <a class="logo" href=""></a>
+      <a href="">О проекте</a>
+    </div>
     <nav class="sidebar">
       <ul>
         <li>
@@ -87,7 +91,7 @@
 
       <h2 id="s4s1">Архитектура</h2>
       <p>Под строительство дома для работников Наркомата финансов была отведена территория двух усадеб, выходивших на Новинский бульвар. Все планы застройки отведенного участка предусматривали полный снос существующих домов и дворов, включая флигели и двор дома Шаляпина. В конечном итоге ни одно строение ради дома Наркомфина не снесли.</p>
-      <p>В проектной документации дом именовался 2-м домом СНК и планировался как многофункциональный комплекс, состоящий из четырёх корпусов, выполняющих разные функции: жилой комплекс, коммунальный центр (в свою очередь, включающий в себя столовую, физкультурный и читальный залы), детский корпус (детский сад и ясли) — он не был построен и впоследствии частично занял корпус столовой и библиотеки, и самостоятельного служебного двора с размещенными на его территории механической прачечной, сушилкой, гаражом и др. Дом должна была окружать обширная парковая территория.</p>
+      <p>В проектной документации дом именовался 2-м домом СНК и планировался как многофункциональный комплекс, состоящий из четырёх корпусов, выполняющих разные функции: жилой комплекс, коммунальный центр (в свою очередь, включающий в себя столовую, физкультурный и читальный залы), детский корпус (детский сад и ясли)&#8202;–&#8202;он не был построен и впоследствии частично занял корпус столовой и библиотеки, и самостоятельного служебного двора с размещенными на его территории механической прачечной, сушилкой, гаражом и др. Дом должна была окружать обширная парковая территория.</p>
 
       <h3 id="s4s2">Пространственная организация жилого комплекса</h3>
       <p>Пространство перед общественным корпусом композиционно выделялось квадратной площадкой, на которой планировалось разместить небольшое здание для детского сада. Все три объёма, различные по массам, строго ритмически уравновешенные, увязанные между собой, составляли композиционное ядро комплекса, сбалансированное в пространстве корпусом прачечной, ориентированным на Новинский бульвар. Перед прачечной также была устроена квадратная площадка, служившая своеобразным парадным пространством, связывающим комплекс с городом. Корпус прачечной так же, как и жилой дом, был частично поднят на колоннах, что освобождало для прохода пространство первого этажа. Пройдя под корпусом прачечной через «парадный двор» перед входом с Новинского бульвара, по диагональной аллее можно было попасть в общественную зону комплекса или по другой аллее через жилой корпус в уровне «открытого» первого этажа — в парк за домом, где была организована своеобразная видовая площадка.</p>
