--- a/narkomfin.html
+++ b/narkomfin.html
@@ -4,10 +4,18 @@
    <meta charset="utf-8">
    <title>Дом Наркомфина</title>
    <link rel="stylesheet" href="stylesheets/style.css">
+   <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
+   <script src="javascripts/sidebar.js" charset="utf-8"></script>
   </head>
   <body>
 
-   <nav>
+
+   <nav class="menubar">
+     <a class="logo" a href="#"></a>
+     <a href="#">О проекте</a>
+  </nav>
+
+   <nav class="sidebar">
      <ul>
        <li>
          <a href="">Дом Наркомфина</a>
