Поправила код, добавила menubar

--- a/narkomfin.html
+++ b/narkomfin.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
     <script src="javascripts/sidebar.js" charset="utf-8"></script>
-
   </head>
+
   <body>
+
+    <nav class="menubar">
+      <a class="logo" href="#"> </a>
+      <a href="#">О проекте</a>
+    </nav>
 
     <nav class="sidebar">
       <ul>
@@ -26,37 +31,40 @@
 
         <li>
           <a href="#s4">Архитектура</a>
-        <ul>
-          <li>
-            <a href="#s4s1">Пространственная организация жилого комплекса</a>
-          </li>
 
-          <li>
-            <a href="#s4s2">Архитектура жилого дома</a>
-          </li>
+          <ul>
+            <li>
+              <a href="#s4s1">Пространственная организация жилого комплекса</a>
+            </li>
 
-          <li>
-            <a href="#s4s3">Проектные и технологические решения дома Наркомфина</a>
-          </li>
+            <li>
+              <a href="#s4s2">Архитектура жилого дома</a>
+            </li>
 
-          <li>
-            <a href="#s4s4">Нарушение концептуального замысла и проектных решений жилого комплекса после окончания строительства</a>
-          </li>
-        </ul>
-      </li>
+            <li>
+              <a href="#s4s3">Проектные и технологические решения дома Наркомфина</a>
+            </li>
+
+            <li>
+              <a href="#s4s4">Нарушение концептуального замысла и проектных решений жилого комплекса после окончания строительства</a>
+            </li>
+          </ul>
+
+        </li>
 
         <li>
           <a href="#s5">Критика проекта</a>
-        <ul>
-        <li>
-            <a href="#s5s1">С технической стороны</a>
-          </li>
 
-          <li>
-            <a href="#s5s2">С бытовой стороны</a>
-          </li>
-        </ul>
-      </li>
+          <ul>
+            <li>
+              <a href="#s5s1">С технической стороны</a>
+            </li>
+
+            <li>
+              <a href="#s5s2">С бытовой стороны</a>
+            </li>
+          </ul>
+        </li>
 
         <li>
           <a href="#s6">Известные жители</a>
