strctrupdate+menubar+все в одной папке

--- a/wiki/narkomfin.html
+++ b/wiki/narkomfin.html
@@ -10,6 +10,13 @@
 
   <body>
 
+    <nav class="menubar">
+      <a class="logo" href="#"> </a>
+      <a href="#">О проекте</a>
+    </nav>
+
+
+
     <nav class="sidebar">
       <ul>
         <li>
