добавлены слайдшоу и стрелки

--- a/narkomfin.html
+++ b/narkomfin.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
     <script src="javascripts/sidebar.js" charset="utf-8"></script>
-
+    <script src="javascripts/gallery.js" charset="utf-8"></script>
   </head>
   <body>
 
@@ -91,30 +91,37 @@
 
       <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
-      <!-- <div class="chevron">
-        <div></div>
-        <div></div>
-      </div> -->
 
       <section class="gallery">
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" /></figure>
-        <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" /></figure>
+        <nav class="galleryNav">
+          <div class="disabled" id="prev"></div>
+          <div id="next"></div>
+        </nav>
+
+        <section class="galleryRail">
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" /></figure>
+        </section>
+
+        <figcaption>
+          <a target="_blank" href="http://tema.livejournal.com/1389928.html">Фотки Тёмы Лебедева</a>
+        </figcaption>
       </section>
 
 
