--- a/narkomfin.html
+++ b/narkomfin.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="javascripts/script.js"></script>
+    <script type="text/javascript" src="javascripts/gallery.js"></script>
   </head>
   <body>
     <div class="menubar">
@@ -82,29 +83,39 @@
       <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
       <img src="images/narkomfin.jpg" alt="Дом наркомфина">
 
-      <div class="chevron">
-        <div></div>
-        <div></div>
-      </div>
 
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" alt="">
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" alt="">
+      <section class="gallery">
+        <nav class="galleryNav">
+          <div class="disabled" id="prev"></div>
+          <div id="next"></div>
+        </nav>
+
+        <section class="galleryRail">
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" alt=""></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" alt=""></figure>
+        </section>
+
+        <figcaption>
+          <a target="_blank" href="http://tema.livejournal.com/1389928.html">Фотки Темы Лебедева</a>
+        </figcaption>
+      </section>
+
 
       <h2 id="s2">История создания</h2>
       <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
