--- a/narkomfin.html
+++ b/narkomfin.html
@@ -116,6 +116,7 @@
           <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" /></figure>
           <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" /></figure>
           <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" /></figure>
         </section>
 
         <figcaption>
