перенесли продж в папку никнейма

--- a/kuhterinairina/narcomfin.html
+++ b/kuhterinairina/narcomfin.html
@@ -126,7 +126,7 @@
           <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg"/></figure>
         </section>
         <figcaption>
-          <a target="_b" href="http://tema.livejournal.com/1389928.html">Фотки Темки Лебедева</a>
+          <a target="_blank" href="http://tema.livejournal.com/1389928.html">Фотки Темки Лебедева</a>
         </figcaption>
       </section>
 
